// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SpaceListItem /> snapshot checks divider dot position in compact mode 1`] = `
<SpaceListItem
  firstLine="firstLine"
  isCompact={true}
  secondLine="testteam"
>
  <ListItemBase
    className="md-space-list-item-wrapper"
    shape="isPilled"
    size={32}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-space-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={32}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={-1}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            />
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-space-list-item-text-wrapper text-row"
            position="middle"
          >
            <div
              className="md-space-list-item-text-wrapper text-row"
              data-position="middle"
            >
              <Text
                data-test="list-item-first-line"
                type="body-primary"
              >
                <p
                  className="md-text-wrapper"
                  data-test="list-item-first-line"
                  data-type="body-primary"
                >
                  firstLine
                </p>
              </Text>
              <DividerDot
                data-test="compact-mode-divider-dot"
              >
                <div
                  className="md-divider-dot-wrapper"
                />
              </DividerDot>
              <Text
                data-test="list-item-second-line"
                style={
                  Object {
                    "color": "var(--theme-text-team-default-normal)",
                  }
                }
                type="body-secondary"
              >
                <small
                  className="md-text-wrapper"
                  data-test="list-item-second-line"
                  data-type="body-secondary"
                  style={
                    Object {
                      "color": "var(--theme-text-team-default-normal)",
                    }
                  }
                >
                  testteam
                </small>
              </Text>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            position="end"
          >
            <div
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</SpaceListItem>
`;

exports[`<SpaceListItem /> snapshot should match snapshot 1`] = `
<SpaceListItem>
  <ListItemBase
    className="md-space-list-item-wrapper"
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-space-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={-1}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            />
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-space-list-item-text-wrapper text-column"
            position="middle"
          >
            <div
              className="md-space-list-item-text-wrapper text-column"
              data-position="middle"
            >
              <Text
                data-test="list-item-first-line"
                type="body-primary"
              >
                <p
                  className="md-text-wrapper"
                  data-test="list-item-first-line"
                  data-type="body-primary"
                />
              </Text>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            position="end"
          >
            <div
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</SpaceListItem>
`;

exports[`<SpaceListItem /> snapshot should match snapshot with action 1`] = `
<SpaceListItem
  action={
    <p>
      action
    </p>
  }
>
  <ListItemBase
    className="md-space-list-item-wrapper"
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-space-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={-1}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            />
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-space-list-item-text-wrapper text-column"
            position="middle"
          >
            <div
              className="md-space-list-item-text-wrapper text-column"
              data-position="middle"
            >
              <Text
                data-test="list-item-first-line"
                type="body-primary"
              >
                <p
                  className="md-text-wrapper"
                  data-test="list-item-first-line"
                  data-type="body-primary"
                />
              </Text>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            position="end"
          >
            <div
              data-position="end"
            >
              <p>
                action
              </p>
            </div>
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</SpaceListItem>
`;

exports[`<SpaceListItem /> snapshot should match snapshot with className 1`] = `
<SpaceListItem
  className="example-class"
>
  <ListItemBase
    className="example-class md-space-list-item-wrapper"
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="example-class md-space-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={-1}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            />
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-space-list-item-text-wrapper text-column"
            position="middle"
          >
            <div
              className="md-space-list-item-text-wrapper text-column"
              data-position="middle"
            >
              <Text
                data-test="list-item-first-line"
                type="body-primary"
              >
                <p
                  className="md-text-wrapper"
                  data-test="list-item-first-line"
                  data-type="body-primary"
                />
              </Text>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            position="end"
          >
            <div
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</SpaceListItem>
`;

exports[`<SpaceListItem /> snapshot should match snapshot with firstLine 1`] = `
<SpaceListItem
  firstLine="firstLine"
>
  <ListItemBase
    className="md-space-list-item-wrapper"
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-space-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={-1}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            />
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-space-list-item-text-wrapper text-column"
            position="middle"
          >
            <div
              className="md-space-list-item-text-wrapper text-column"
              data-position="middle"
            >
              <Text
                data-test="list-item-first-line"
                type="body-primary"
              >
                <p
                  className="md-text-wrapper"
                  data-test="list-item-first-line"
                  data-type="body-primary"
                >
                  firstLine
                </p>
              </Text>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            position="end"
          >
            <div
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</SpaceListItem>
`;

exports[`<SpaceListItem /> snapshot should match snapshot with id 1`] = `
<SpaceListItem
  id="example-id"
>
  <ListItemBase
    className="md-space-list-item-wrapper"
    id="example-id"
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-space-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          id="example-id"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={-1}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            />
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-space-list-item-text-wrapper text-column"
            position="middle"
          >
            <div
              className="md-space-list-item-text-wrapper text-column"
              data-position="middle"
            >
              <Text
                data-test="list-item-first-line"
                type="body-primary"
              >
                <p
                  className="md-text-wrapper"
                  data-test="list-item-first-line"
                  data-type="body-primary"
                />
              </Text>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            position="end"
          >
            <div
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</SpaceListItem>
`;

exports[`<SpaceListItem /> snapshot should match snapshot with isAlert 1`] = `
<SpaceListItem
  isAlert={true}
>
  <ListItemBase
    className="md-space-list-item-wrapper"
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-space-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={-1}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            />
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-space-list-item-text-wrapper text-column"
            position="middle"
          >
            <div
              className="md-space-list-item-text-wrapper text-column"
              data-position="middle"
            >
              <Text
                data-test="list-item-first-line"
                type="body-primary"
              >
                <p
                  className="md-text-wrapper"
                  data-test="list-item-first-line"
                  data-type="body-primary"
                />
              </Text>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            position="end"
          >
            <div
              data-position="end"
            >
              <Icon
                fillColor="var(--listitem-icon)"
                name="alert"
                scale={14}
                strokeColor="none"
                weight="bold"
              >
                <div
                  className="md-icon-wrapper"
                >
                  <svg
                    className=""
                    data-autoscale={false}
                    data-scale={14}
                    data-test="alert"
                    height="100%"
                    style={
                      Object {
                        "fill": "var(--listitem-icon)",
                        "stroke": "none",
                      }
                    }
                    viewBox="0, 0, 32, 32"
                    width="100%"
                  />
                </div>
              </Icon>
            </div>
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</SpaceListItem>
`;

exports[`<SpaceListItem /> snapshot should match snapshot with isAlertMuted 1`] = `
<SpaceListItem
  isAlertMuted={true}
>
  <ListItemBase
    className="md-space-list-item-wrapper"
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-space-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={-1}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            />
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-space-list-item-text-wrapper text-column"
            position="middle"
          >
            <div
              className="md-space-list-item-text-wrapper text-column"
              data-position="middle"
            >
              <Text
                data-test="list-item-first-line"
                type="body-primary"
              >
                <p
                  className="md-text-wrapper"
                  data-test="list-item-first-line"
                  data-type="body-primary"
                />
              </Text>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            position="end"
          >
            <div
              data-position="end"
            >
              <Icon
                fillColor="var(--listitem-icon)"
                name="alert-muted"
                scale={14}
                strokeColor="none"
                weight="bold"
              >
                <div
                  className="md-icon-wrapper"
                >
                  <svg
                    className=""
                    data-autoscale={false}
                    data-scale={14}
                    data-test="alert-muted"
                    height="100%"
                    style={
                      Object {
                        "fill": "var(--listitem-icon)",
                        "stroke": "none",
                      }
                    }
                    viewBox="0, 0, 32, 32"
                    width="100%"
                  />
                </div>
              </Icon>
            </div>
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</SpaceListItem>
`;

exports[`<SpaceListItem /> snapshot should match snapshot with isEnterRoom 1`] = `
<SpaceListItem
  isEnterRoom={true}
>
  <ListItemBase
    className="md-space-list-item-wrapper md-space-list-item-is-new-activity"
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-space-list-item-wrapper md-space-list-item-is-new-activity md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={-1}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            />
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-space-list-item-text-wrapper text-column"
            position="middle"
          >
            <div
              className="md-space-list-item-text-wrapper text-column"
              data-position="middle"
            >
              <Text
                data-test="list-item-first-line"
                type="body-primary"
              >
                <p
                  className="md-text-wrapper"
                  data-test="list-item-first-line"
                  data-type="body-primary"
                />
              </Text>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            position="end"
          >
            <div
              data-position="end"
            >
              <Icon
                fillColor="var(--listitem-tick)"
                name="enter-room"
                scale={14}
                strokeColor="none"
                weight="bold"
              >
                <div
                  className="md-icon-wrapper"
                >
                  <svg
                    className=""
                    data-autoscale={false}
                    data-scale={14}
                    data-test="enter-room"
                    height="100%"
                    style={
                      Object {
                        "fill": "var(--listitem-tick)",
                        "stroke": "none",
                      }
                    }
                    viewBox="0, 0, 32, 32"
                    width="100%"
                  />
                </div>
              </Icon>
            </div>
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</SpaceListItem>
`;

exports[`<SpaceListItem /> snapshot should match snapshot with isError 1`] = `
<SpaceListItem
  isError={true}
>
  <ListItemBase
    className="md-space-list-item-wrapper"
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-space-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={-1}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            />
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-space-list-item-text-wrapper text-column"
            position="middle"
          >
            <div
              className="md-space-list-item-text-wrapper text-column"
              data-position="middle"
            >
              <Text
                data-test="list-item-first-line"
                type="body-primary"
              >
                <p
                  className="md-text-wrapper"
                  data-test="list-item-first-line"
                  data-type="body-primary"
                />
              </Text>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            position="end"
          >
            <div
              data-position="end"
            >
              <Icon
                fillColor="var(--label-error-text)"
                name="priority-circle"
                scale={14}
                strokeColor="none"
                weight="filled"
              >
                <div
                  className="md-icon-wrapper"
                >
                  <svg
                    className=""
                    data-autoscale={false}
                    data-scale={14}
                    data-test="priority-circle"
                    height="100%"
                    style={
                      Object {
                        "fill": "var(--label-error-text)",
                        "stroke": "none",
                      }
                    }
                    viewBox="0, 0, 32, 32"
                    width="100%"
                  />
                </div>
              </Icon>
            </div>
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</SpaceListItem>
`;

exports[`<SpaceListItem /> snapshot should match snapshot with isMention 1`] = `
<SpaceListItem
  isMention={true}
>
  <ListItemBase
    className="md-space-list-item-wrapper md-space-list-item-is-new-activity"
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-space-list-item-wrapper md-space-list-item-is-new-activity md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={-1}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            />
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-space-list-item-text-wrapper text-column"
            position="middle"
          >
            <div
              className="md-space-list-item-text-wrapper text-column"
              data-position="middle"
            >
              <Text
                data-test="list-item-first-line"
                type="body-primary"
              >
                <p
                  className="md-text-wrapper"
                  data-test="list-item-first-line"
                  data-type="body-primary"
                />
              </Text>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            position="end"
          >
            <div
              data-position="end"
            >
              <Icon
                fillColor="var(--listitem-tick)"
                name="mention"
                scale={14}
                strokeColor="none"
                weight="bold"
              >
                <div
                  className="md-icon-wrapper"
                >
                  <svg
                    className=""
                    data-autoscale={false}
                    data-scale={14}
                    data-test="mention"
                    height="100%"
                    style={
                      Object {
                        "fill": "var(--listitem-tick)",
                        "stroke": "none",
                      }
                    }
                    viewBox="0, 0, 32, 32"
                    width="100%"
                  />
                </div>
              </Icon>
            </div>
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</SpaceListItem>
`;

exports[`<SpaceListItem /> snapshot should match snapshot with isNewActivity 1`] = `
<SpaceListItem
  isNewActivity={true}
>
  <ListItemBase
    className="md-space-list-item-wrapper md-space-list-item-is-new-activity"
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-space-list-item-wrapper md-space-list-item-is-new-activity md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={-1}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            />
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-space-list-item-text-wrapper text-column"
            position="middle"
          >
            <div
              className="md-space-list-item-text-wrapper text-column"
              data-position="middle"
            >
              <Text
                data-test="list-item-first-line"
                type="body-primary"
              >
                <p
                  className="md-text-wrapper"
                  data-test="list-item-first-line"
                  data-type="body-primary"
                />
              </Text>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            position="end"
          >
            <div
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</SpaceListItem>
`;

exports[`<SpaceListItem /> snapshot should match snapshot with isSelected 1`] = `
<SpaceListItem
  isSelected={true}
>
  <ListItemBase
    className="md-space-list-item-wrapper"
    isSelected={true}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-space-list-item-wrapper md-list-item-base-wrapper active"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={-1}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            />
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-space-list-item-text-wrapper text-column"
            position="middle"
          >
            <div
              className="md-space-list-item-text-wrapper text-column"
              data-position="middle"
            >
              <Text
                data-test="list-item-first-line"
                type="body-primary"
              >
                <p
                  className="md-text-wrapper"
                  data-test="list-item-first-line"
                  data-type="body-primary"
                />
              </Text>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            position="end"
          >
            <div
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</SpaceListItem>
`;

exports[`<SpaceListItem /> snapshot should match snapshot with isSelected and draft 1`] = `
<SpaceListItem
  draft="Test Message"
  isSelected={false}
>
  <ListItemBase
    className="md-space-list-item-wrapper"
    isSelected={false}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-space-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={-1}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            />
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-space-list-item-text-wrapper text-column"
            position="middle"
          >
            <div
              className="md-space-list-item-text-wrapper text-column"
              data-position="middle"
            >
              <Text
                data-test="list-item-first-line"
                type="body-primary"
              >
                <p
                  className="md-text-wrapper"
                  data-test="list-item-first-line"
                  data-type="body-primary"
                />
              </Text>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            position="end"
          >
            <div
              data-position="end"
            >
              <Icon
                name="draft-indicator-small"
                scale={14}
                strokeColor="none"
                weight="filled"
              >
                <div
                  className="md-icon-wrapper"
                >
                  <svg
                    className=""
                    data-autoscale={false}
                    data-scale={14}
                    data-test="draft-indicator-small"
                    fill="currentColor"
                    height="100%"
                    style={
                      Object {
                        "stroke": "none",
                      }
                    }
                    viewBox="0, 0, 14, 14"
                    width="100%"
                  />
                </div>
              </Icon>
            </div>
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</SpaceListItem>
`;

exports[`<SpaceListItem /> snapshot should match snapshot with isUnread 1`] = `
<SpaceListItem
  isUnread={true}
>
  <ListItemBase
    className="md-space-list-item-wrapper md-space-list-item-is-new-activity"
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-space-list-item-wrapper md-space-list-item-is-new-activity md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={-1}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            />
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-space-list-item-text-wrapper text-column"
            position="middle"
          >
            <div
              className="md-space-list-item-text-wrapper text-column"
              data-position="middle"
            >
              <Text
                data-test="list-item-first-line"
                type="body-primary"
              >
                <p
                  className="md-text-wrapper"
                  data-test="list-item-first-line"
                  data-type="body-primary"
                />
              </Text>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            position="end"
          >
            <div
              data-position="end"
            >
              <Icon
                fillColor="var(--listitem-tick)"
                name="unread"
                scale={14}
                strokeColor="none"
                weight="bold"
              >
                <div
                  className="md-icon-wrapper"
                >
                  <svg
                    className=""
                    data-autoscale={false}
                    data-scale={14}
                    data-test="unread"
                    height="100%"
                    style={
                      Object {
                        "fill": "var(--listitem-tick)",
                        "stroke": "none",
                      }
                    }
                    viewBox="0, 0, 32, 32"
                    width="100%"
                  />
                </div>
              </Icon>
            </div>
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</SpaceListItem>
`;

exports[`<SpaceListItem /> snapshot should match snapshot with secondLine 1`] = `
<SpaceListItem
  secondLine="secondLine"
>
  <ListItemBase
    className="md-space-list-item-wrapper"
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-space-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={-1}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            />
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-space-list-item-text-wrapper text-column"
            position="middle"
          >
            <div
              className="md-space-list-item-text-wrapper text-column"
              data-position="middle"
            >
              <Text
                data-test="list-item-first-line"
                type="body-primary"
              >
                <p
                  className="md-text-wrapper"
                  data-test="list-item-first-line"
                  data-type="body-primary"
                />
              </Text>
              <Text
                data-test="list-item-second-line"
                style={
                  Object {
                    "color": "var(--theme-text-team-default-normal)",
                  }
                }
                type="body-secondary"
              >
                <small
                  className="md-text-wrapper"
                  data-test="list-item-second-line"
                  data-type="body-secondary"
                  style={
                    Object {
                      "color": "var(--theme-text-team-default-normal)",
                    }
                  }
                >
                  secondLine
                </small>
              </Text>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            position="end"
          >
            <div
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</SpaceListItem>
`;

exports[`<SpaceListItem /> snapshot should match snapshot with style 1`] = `
<SpaceListItem
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ListItemBase
    className="md-space-list-item-wrapper"
    shape="isPilled"
    size={50}
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-space-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          style={
            Object {
              "color": "pink",
            }
          }
          tabIndex={-1}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            />
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-space-list-item-text-wrapper text-column"
            position="middle"
          >
            <div
              className="md-space-list-item-text-wrapper text-column"
              data-position="middle"
            >
              <Text
                data-test="list-item-first-line"
                type="body-primary"
              >
                <p
                  className="md-text-wrapper"
                  data-test="list-item-first-line"
                  data-type="body-primary"
                />
              </Text>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            position="end"
          >
            <div
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</SpaceListItem>
`;

exports[`<SpaceListItem /> snapshot should match snapshot with teamColor 1`] = `
<SpaceListItem
  teamColor="cobalt"
>
  <ListItemBase
    className="md-space-list-item-wrapper"
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-space-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={-1}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            />
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-space-list-item-text-wrapper text-column"
            position="middle"
          >
            <div
              className="md-space-list-item-text-wrapper text-column"
              data-position="middle"
            >
              <Text
                data-test="list-item-first-line"
                type="body-primary"
              >
                <p
                  className="md-text-wrapper"
                  data-test="list-item-first-line"
                  data-type="body-primary"
                />
              </Text>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            position="end"
          >
            <div
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</SpaceListItem>
`;
